--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,6 @@ services:
       NODE_ENV: production
     volumes:
       - .:/usr/src/app  # Optional: Mount the current directory for live updates (remove for production)
-    deploy:
-      restart_policy:
-        condition: on-failure
     networks:
       - default
+    restart: on-failure
