--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
 version: '3.8'
 
+networks:
+  default:
+    driver: bridge
+
 services:
   epg-filter:
     image: epgfilterapp:latest
     ports:
-      - "3000:3000"  # Map port 3000 of the container to port 3000 on the host
+      - "3000:3000"
     environment:
       NODE_ENV: production
     volumes:
       - .:/usr/src/app  # Optional: Mount the current directory for live updates (remove for production)
+    deploy:
+      restart_policy:
+        condition: on-failure
     networks:
-      - epgfilter_network
-
-networks:
-  epgfilter_network:
-    driver: bridge
+      - default
