--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
-version: '2.4'
+version: '3.8'
+
 services:
-  epgfilter:
-    container_name: epgfilter
-    image: epgfilterapp:latest
+  epg-filter:
+    build:
+      context: .
     ports:
-      - "3000:3000"  # Map port 3000 of the container to port 3000 on the host
+      - "3000:3000"
     environment:
       NODE_ENV: production
     volumes:
-      - .:/usr/src/app  # Optional: Mount the current directory for live updates (remove for production)
-    restart: unless-stopped
+      - .:/usr/src/app
+    deploy:
+      restart_policy:
+        condition: on-failure
