--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && node scripts/modify-imports.js",
     "start": "tsx src/index.ts",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cron": "^3.1.7",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fast-xml-parser": "^4.4.1",
     "fs": "0.0.1-security",
@@ -31,6 +32,7 @@
     "@types/sax": "^1.2.7",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
+    "esbuild": "^0.23.1",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "nodemon": "^3.0.1",
