added logger with multiple log levels

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ SOURCE_EPG_LOCAL_FILE=./local.xml.gz
 SOURCE_GENERATOR_INFO_NAME=IPTV service (https://tvprovider.com)
 EPG_OUTPUT_FILE_PATH=./filtered_epg.xml
 EPG_OUTPUT_API_RESULT_PATH=/epg.xml
+LOG_LEVEL=INFO
